--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <body>
-    <footer th:fragment="footer" class="bg-gray-800 border-t border-gray-700 py-6 mt-12">
+    <footer th:fragment="footer" class="bg-gray-800 border-t border-gray-700 py-6">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <p class="text-gray-400 text-sm">© 2025 EstiloUnico. Todos los derechos reservados.</p>
         </div>
+		
+		<script>
+		  lucide.createIcons();
+		</script>
     </footer>
+	
 </body>
 </html>
